Done! Turning this beast in!

--- a/style.css
+++ b/style.css
@@ -81,8 +81,8 @@ h1{
 }
 
 .lead{
-  font-family: 'Source Sans Pro', sans-serif;
-  color: #ff6961;
+  font-family: 'Zen Tokyo Zoo', cursive;
+  font-size: xx-large;
 }
 
 .form-control{
